# fox-say

./: .gitignore  AGENTS.md  FoxSay Document Parsing Research.md  FoxSay-Architecture-Review.md  FoxSay-Review-Conclusion.md  HANDOFF.md  README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  artifacts.py  chat.py  contracts.py  courses.py  dashboard.py  events.py  evidence.py  knowledge_graph.py  materials.py  notes.py  review.py  review_session.py  review_v2.py  settings.py  (+1 more)
backend/eval/: __init__.py  generator.py  judge.py  runner.py  schemas.py  validator.py
backend/scripts/: __init__.py  align_prerequisites.py  check_files.py  check_jobs.py  check_kc_status.py  check_outline_sections.py  check_pipeline_status.py  check_semantic_jobs.py  diagnose_atoms.py  diagnose_kc_audit.py  diagnose_outline.py  diagnose_term_rejection.py  fix_job_budget.py  fix_kc_relations.py  knowledge_v2_e1_visual.py  knowledge_v2_g1_auto_linear.py  rebuild_projections.py  retry_semantic.py  retry_semantic_clean.py  run_eval.py  run_linalg_benchmark.py  test_embed_fragments.py  test_embed_params.py  test_indexer_steps.py  test_mineru_upload.py  test_parse_direct.py  test_term_patterns.py
backend/tests/: README.md  conftest.py  test_agent_loop.py  test_agent_runs.py  test_align_prerequisites.py  test_answer_envelope.py  test_artifacts_api.py  test_audited_text_model.py  test_chat_api_v2.py  test_course_compiler.py  test_courses.py  test_crag.py  test_deep_dive_router.py  test_deep_dive_service.py  test_dmap.py  test_eval_generator.py  test_eval_judge.py  test_eval_runner.py  test_eval_validator.py  test_fragment_retrieval.py  test_kc_relations.py  test_knowledge_graph.py  test_knowledge_jobs.py  test_knowledge_status_api.py  test_knowledge_v2_e1_visual.py  test_knowledge_v2_g1_harness.py  test_knowledge_worker.py  test_knowledge_worker_lifespan.py  test_legacy_raw_text_retrieval.py  test_material_indexer.py  test_material_jobs_api.py  test_material_revisions.py  test_materials.py  test_merkle.py  test_notes_api.py  test_pr0_contracts.py  test_query_tools.py  test_quick_answer_service.py  test_review.py  test_review_v2_api.py  (+10 more)
(+199 files in other folders)
