[project]
name = "foxsay-backend"
version = "0.1.0"
description = "Structural placeholder for the FoxSay FastAPI backend."
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "python-multipart",
  "qdrant-client",
  "openai",
  "pdfplumber",
  "openpyxl",
  "python-pptx",
  "docling",
  "langgraph",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "ruff",
  "mypy"
]
marker = [
  "marker-pdf",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

