[project]
name = "foxsay-backend"
version = "0.1.0"
description = "Structural placeholder for the FoxSay FastAPI backend."
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "python-multipart",
  "qdrant-client",
  "openai",
  "pdfplumber",
  "openpyxl",
  "python-pptx",
  "langgraph",
  "markitdown[all]",
  "docling>=2.111.0",
  "langchain-text-splitters>=1.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "ruff",
  "mypy"
]
marker = [
  "marker-pdf",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

